# yanko

./: .flake8  .gitignore  README.md  Rise EXtreme.lrc  Taskfile.yaml  Yanko.spec  Ynko.alfredworkflow  app.py  appdata  bc.json  bc.txt  config.yaml  environment.yml  icon.icns  libportaudio.dylib  nuitka-crash-report.xml  playback  playlist.txt  pyproject.toml  setup.py  txt  yanko.json
.syncedlyrics/: musixmatch_token.json
preferences/yankopref/yankopref/: Info.plist  yankopref.h  yankopref.m
preferences/yankopref/yankopref.xcodeproj/: project.pbxproj
src/: Yanko.py
src/yanko/: .pylintrc  __main__.py  cli.py  version.py
src/yanko/api/: server.py
src/yanko/core/: __init__.py  cachable.py  config.py  shell.py  thread.py
src/yanko/db/: base.py
src/yanko/player/: base.py  bpm.py  device.py  exceptions.py  ffmpeg.py  output.py
src/yanko/resources/: __init__.py
src/yanko/sonic/: __init__.py  announce.py  api.py  artist.py  beats.py  coverart.py  manager.py
yanko/: __init__.py  __main__.py  cli.py  notifications.py  version.py
yanko/api/: auth.py  server.py
yanko/api/routers/: __init__.py
yanko/core/: __init__.py  bytes.py  cachable.py  config.py  date.py  shell.py  string.py  thread.py
yanko/db/: base.py
yanko/db/models/: __init__.py  album.py  artist.py  artist_info.py  beets.py
yanko/lametric/: __init__.py  auth.py  pixel.py
yanko/player/: base.py  bpm.py  device.py  exceptions.py  ffmpeg.py  ffplay.py  input.py  miniplay.py  output.py
yanko/resources/: __init__.py
yanko/sonic/: __init__.py  announce.py  api.py  api_cache.py  artist.py  beats.py  coverart.py  ffplay.py  manager.py  nowplay.py  playqueue.py  psub.py
yanko/ui/: __main__.py  app.py  hotkey.py  icons.py  keys.py  models.py
yanko/znayko/: __init__.py
(+12 files in other folders)
