[tool.poetry]
name = "yanko"
version = "0.2.0"
description = ""
authors = ["cacko <alex@cacko.net>"]

[[tool.poetry.source]]
name = "cacko"
secondary = true
url = "https://pypi.cacko.net/simple/"

[tool.poetry.dependencies]
python = ">=3.8,<=3.11"
pyfiglet = "^0.8.post1"
PyGObject = "^3.42.1"
requests = "^2.28.1"
packaging = "^21.3"
PyYAML = "^6.0"
py2app = "^0.28.2"
toml = "^0.10.2"
tld = "^0.12.6"
arrow = "^1.2.2"
dataclasses-json = "^0.5.7"
rumps = "^0.5.14"
bottle = "^0.12.21"
Pillow = "^9.2.0"
appdir = "^0.2"
pyotp = "^2.6.0"
click = "^8.1.3"
pixelme = "^0.4.7"
bs4 = "^0.0.1"   
ffmpeg-python = "^0.2.0"
numpy = ">=1.23"
sounddevice = "^0.4.4.3"
cffi = "^1.15.1"
olefile = "^0.46"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
semver = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
